# ChangeLog for media-video/vdr
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.46 2004/04/29 20:23:20 fow0ryl Exp $

*vdr-1.3.6-r1 (23 Apr 2004)
  23. Apr 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6-r1.ebuild
  Support for 2.6 kernels and other improvements

  29. Apr 2004: Henning Ryll <henning.ryll@web.de> vdr-1.3.6-r1.ebuild
  libsi patch added

*vdr-1.3.6 (18. March 2004)
  18. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  Added xpm logos

*vdr-1.3.6 (15. March 2004)
  15. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  Added elchi patch

*vdr-1.3.6 (14. March 2004)
  14. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  version bump.

vdr-1.3.4
  15 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
  initial 1-3.4
  added Elchi

vdr-1.3.2
  24 Jan 2004; M.Hierling <mad@cc.fh-lippe.de>
  initial, removed some includes, libs
  removed all patches, this is vanilla

*vdr-1.2.6-r5
  12 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
  added upt patch provided by thoand
  new vdr_opts put
  switched back to ~x86

*vdr-1.2.6-r4
  24 Jan 2004; M.Hierling <mad@cc.fh-lippe.de>
  marked as stable for x86 tree
  beauty confdir

  7 Jan 2004; H.Ryll <henning.ryll@web.de>
  Optional 256 Color OSD added VDR_OPTS=256color

  27 Dez 2003; M.Hierling <mad@cc.fh-lippe.de>
  fixed some typos
  added full path to all binarys
  added VDR_OPTS emergeplugs for automatically emerge of all used plugins (read wiki!)
  qpkg change output to uncolored for use with emerge
  changed all patch stuff to epatch (not that much unwanted output, only nice green [OK] )

  27 Dez 2003; H.Ryll <henning.ryll@web.de>
  Update to Improved OSD 3a

  7 Jan 2004; H.Ryll <henning.ryll@web.de>
  Optional 256 Color OSD added
