@@ -1,8 +1,11 @@
 # ChangeLog for media-video/vdr
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.46 2004/04/29 20:23:20 fow0ryl Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.47 2004/05/12 15:39:45 mad Exp $
 
 *vdr-1.3.6-r1 (23 Apr 2004)
+  15. May 2004: Martin Hierling <mad@cc.fh-lippe.de>
+  renamed fam depend for init script to famd
+
   23. Apr 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6-r1.ebuild
   Support for 2.6 kernels and other improvements
 
